<resources>
    <string name="app_name">OsomApp</string>
    <string name="clickToClose">Click again to close</string>
    <string name="author">Author: Marcin Zglinicki</string>
    <string name="scrollTop">Scroll to begin</string>
    <string name="checkNetConnection">Check internet connection</string>
    <string name="photo">Photo:</string>
    <string name="description">Description:</string>
    <string name="speakerNameTitle">Speaker name:</string>
    <string name="scoreTitle">Score:</string>
    <string name="rateProfileTitle">Rate profile:</string>
    <string name="sendNoteBtnTitle">Send note</string>
    <string name="toolbarTitle">Ossom App</string>
    <string name="onNetConnectionFailed">Check internet connection or click again to close</string>
    <string name="your_note">Your note:</string>
    <string name="megastars">megastars</string>

</resources>